--- a/SMSServer/nbproject/project.properties
+++ b/SMSServer/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/SMSServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqljdbc42.jar=C:\\Users\\Andres\\Documents\\Java Libs\\sqljdbc42.jar
+file.reference.sqljdbc4.jar=C:\\Users\\Andres\\Documents\\NetBeansProjects\\Libs\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.SMSLib.classpath}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
